[package]
name = "rust-lambda-book"
version = "0.1.0"
edition = "2021"

[dependencies]
cuid2 = "0.1.3"
lambda_http = "0.13.0"
parking_lot = "0.12.3"
serde = "1.0.210"
serde_json = "1.0.128"

tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "serverless_link_shortener"
path = "src/main.rs"
test = false
